syntax = "proto3";

option csharp_namespace = "GrpcUserService";

package user;

service User {
    rpc GetUser (GetUserRequest) returns (GetUserResponse);
    rpc AddUser (AddUserRequest) returns (AddUserResponse);
}

message GetUserRequest {
    int32 userId = 1;
}

message GetUserResponse {
    int32 userId = 1;
    string name = 2;
    string email = 3;
}

message AddUserRequest {
    string name = 1;
    string email = 2;
}

message AddUserResponse {
    int32 userId = 1;
}